Rewrote parts of Introduction

--- a/introduction.Rmd
+++ b/introduction.Rmd
@@ -8,26 +8,36 @@
 >
 > Faust, Part I, Johann Wolfgang von Goethe [-@goethe2015]
 
-Humans are intensely visual creatures: roughly 20-30% of our brain is involved in visual processing [@van2003; @sheth2016]. This is reflected in a highly sophisticated and powerful visual processing system [see e.g. @goebel2004; @knudsen2020; for a brief review, see @ware2019], which enables us to perform some very advanced perceptual tasks. For instance, it is well-established that our brain can process certain highly salient visual stimuli in sub-20-millisecond times, outside of conscious attention [@ledoux2000; @ledoux2003], and that we can make extremely rapid, accurate, and parallel visual judgements, through phenomena known as subitizing and pre-attentive processing [@mandler1982; @treisman1985]. These features establish the visual cortex as our most potent information channel, both in terms of bandwidth and throughput.
+Humans are intensely visual creatures. About 20-30% of our brain is involved in visual processing [@van2003; @sheth2016], providing support for a highly sophisticated and powerful visual system [see e.g. @goebel2004; @knudsen2020; for a brief review, see @ware2019]. This enables us to perform some remarkable perceptual feats. For instance, it is well-established that our brain can process certain highly salient visual stimuli in sub-20-millisecond times, outside of conscious attention [@ledoux2000; @ledoux2003], and that we can make extremely rapid, accurate, and parallel visual judgements, through phenomena known as subitizing and pre-attentive processing [@mandler1982; @treisman1985]. Features such as these establish the visual system as the most potent information channel at our disposal.
 
-Importantly, the visual cortex excels at processing not just concrete objects, but also abstract information, a fact that statisticians have been leveraging for a long time. Starting with early charts and maps, data visualization co-evolved alongside mathematical statistics, offering a complementary set of tools and methods [for a review, see @friendly2006 or Section \@ref(brief-history)]. Notably, while mathematical statistics was developed with the primary goal of confirming or disproving hypotheses, data visualization provided an alternative approach: instead of binary decisions, it facilitated unsupervised exploration, "forcing us to notice that which we would never expect to see" [@tukey1977]. This valuable role in revealing the unexpected eventually established data visualization as a respected part of the applied statistician's arsenal.
+Crucially, while the visual cortex excels at processing data about the natural world, it is equally adept at processing abstract information. Statisticians have long capitalized on this fact. Emerging from early charts and maps, data visualization has evolved alongside mathematical statistics, providing a complementary set of tools and methods [for a review, see @friendly2006 or Section \@ref(brief-history)]. While mathematical statistics was primarily developed with the goal of supporting or disproving scientific hypotheses, data visualization offered an alternative approach: unsupervised exploration. Rather than providing answers to binary decisions, it demonstrated its worth in "forcing us to notice that which we would never expect to see" [@tukey1977]. This invaluable role in revealing the unexpected eventually established data visualization as an indispensable part of the applied statistician's arsenal.
 
-However, our interaction with the natural world extends beyond sight. When we try to understand some unknown object, we do not just look at it: if we can, we also touch, manipulate, and probe. Within our brain, action and perception are not independent, but are instead interconnected, mutually reinforcing processes [see e.g. @dijkerman2007; @lederman2009]; seeing is believing, but if you can't put your finger on it, how much is that belief really worth? Thus, it was only natural that, eventually, statisticians would start exploiting this relationship between visual perception and action as well. The development of computer graphics and interactive data visualization in the latter part of the twentieth century transformed the idea of "interrogating a chart" from a mere turn of phrase into tangible reality. All of a sudden, it became possible to directly manipulate the visual representation of the data in real time, getting new perspectives and insights at the stroke of a key or click of a button. 
+Now, while vision is one of the primary ways we gather information, our interaction with the natural world extends beyond sight. When trying to understand unknown objects, we do not just look; we also touch, manipulate, and probe. Consequently, within our brain, action and perception are not independent, but instead deeply interconnected, mutually reinforcing processes [see e.g. @dijkerman2007; @lederman2009]. We learn most effectively by action and observing the resulting changes; passive observation is less effective. As the saying goes, seeing is believing, but how much is that belief really worth if you can't put your finger on it?
 
-These days, interactive data visualization has become a widely popular method of presenting data, but, a number of issues remain unresolved. Specifically, while interactive figures make frequent appearance in online news articles and commercial dashboards, and the data science ecosystem offers a plethora of tools and packages, there are still significant gaps in the utilization and understanding of interactive visualizations. Individual analysts rarely integrate interactive visualizations into their workflows [see e.g. @batch2017], and, despite the fact that many sophisticated interactive features have been developed over the years, their general availability is often fairly limited (see Section \@ref(background)). Finally, a core issue that is yet to be resolved is that of data pipelines: how do we go about transforming raw data into summary statistics that can be displayed by interactive graphics, in an efficient and consistent manner [@wickham2009; @vanderplas2020]?
+Naturally, statisticians would eventually come to exploit this connection between perception and action as well, just as they had done with visual perception alone. In the latter half of the twentieth century, the development of computer graphics and interactive data visualization transformed the idea of "interrogating a chart" from a mere turn of phrase into tangible reality. Suddenly, it became possible to directly manipulate the visual representation of the data in real time, such that new visual insights could be obtained at the stroke of a key or click of a button.
 
-In this thesis, I explore these gaps and try to identify the underlying issues which make developing interactive data visualization systems challenging. A key argument, echoing Leland Wilkinson's Grammar of Graphics (GoG) model [-@wilkinson2012], is that, although plots are composed of geometric objects, they are not mere pictures. Instead, they contain a large amount of structure, and this becomes particularly noticeable under interaction. I further contend that, while GoG offers a foundational framework for understanding the structure underlying graphics, to be able to fully integrate interaction, the model warrants refinement. To illustrate this point bluntly, I want to raise attention to the discrepancy between the following two quotes:
+The power of interactive data visualization quickly established it as one of the most popular ways of presenting data. Today, interactive graphics make frequent appearance in online news articles, on government websites, and in commercial dashboards. Similarly, data science developer ecosystems abound with software packages and tools for creating interactive graphics. As such, given its ubiquity, it may seem as though interactive data visualization is a "solved problem".
+
+Yet, a number of unresolved issues surrounding the use and understanding interactive figures remain. Although large organizations favor interactive data visualizations, individual analysts seldom integrate them into their workflows [see e.g. @batch2017]. Moreover, despite the development of a wide array of sophisticated interactive features over the years, only a small fraction of them make it into widely available software (see Section \@ref(background)). Finally, a core underlying issue is that of data pipelines: how do we go about transforming raw data into something that can be visualized interactively, in a simple yet efficient manner [@wickham2009; @vanderplas2020]?
+
+In this thesis, I explore these gaps and try to identify the underlying issues which make the development of interactive data visualization systems challenging. A recurring theme will be that, although plots are visual entities composed of geometric objects, they are not mere pictures. Instead, they contain a significant amount of implicit, algebraic structure, which becomes particularly apparent when interaction enters the scene. By focusing on the algebraic structure underlying plots, I build upon the work of Leland Wilkinson, and the Grammar of Graphics (GoG) model in particular [-@wilkinson2012]. However, I contend that, while offering a foundational framework, to fully encompass the scope of interactive graphics, the GoG model warrants certain refinements. To make the point rather bluntly, I want to draw attention to the following two quotes:
 
 > "This system cannot produce a meaningless graphic, however. This is a strong claim, vulnerable to a single counter-example. It is a claim based on the formal rules of the system, however, not on the evaluation of specific graphics it may produce."
 >
 > "Some of the combinations of graphs and statistical methods may be degenerate or bizarre, but there is no moral reason to restrict them."
 >
-> @wilkinson2012, pp. 15 and 112^[See also the following quote: "I have tried to build the argument, except for the statistical methods in Chapter 7, from elementary definitions.", pp. 10 of the preface to the first edition.].
+> @wilkinson2012, pp. 15 and 112
 
-What makes some combinations of graphics and statistics meaningful, while others degenerate or bizarre? I believe that the answer to this question lies at the core of many of the problems with interactive data visualization. Specifically, I argue that, for plots to be well-behaved, there needs to be a special kind of congruence between data, summary statistics, and geometric objects. This is especially true under interaction; what we can *do* with a plot is fundamentally determined by what the plot *is*. To formally describe this congruence between data, statistics, and graphics, I propose a model leveraging some fundamental algebraic structures and concepts from category theory^[Which go beyond those described by @wilkinson2012.].
+What makes some combinations of graphics and statistics meaningful, while others degenerate or bizarre? I believe that answering this question is essential for building coherent interactive data visualization systems. Arguably, summary statistics and their properties are a somewhat overlooked part of the GoG model^[See also the following quote: "I have tried to build the argument, except for the statistical methods in Chapter 7, from elementary definitions.", pp. 10 of the first-edition preface.]; however, I contend that, when developing interactive data visualizations, grappling with them is essential.
 
-Finally, to validate and refine these theoretical concepts, I also develop an original open-source interactive data visualization library. Consequently, this thesis also details the design considerations, architecture, and components of this system, along with its application to real-world data. My goal is to demonstrate that many of the theoretical considerations have direct impact on the design characteristics of the system. Ultimately, I contend that, to build truly general and efficient interactive data visualization systems, we need to take both the theoretical and practical considerations into account. 
+Specifically, I argue that what we can *do* with a graphic is fundamentally determined what the graphics *is*, and summary statistics are an unavoidable part of that. Certain types of plots exhibit a special kind of congruence between data, summary statistics, and visuals, which ensures predictable behavior under interaction. Other types of plots break this congruence, making implementing certain interactive features challenging. However, what is this congruence? To describe it formally, I propose a model leveraging some fundamental algebraic concepts from category theory [see e.g. @fong2019]. These concepts, and my application of them, extends beyond the model developed by @wilkinson2012. Specifically, unlike GoG, which treats data, statistics, and graphics as entirely independent, modular components, I propose a compositional model which focuses on preserving key mathematical properties.
+
+Finally, all of this theoretical work would be for naught if it did not lead to practical insights. Specifically, despite its theoretical underpinnings, the end-goal of this work is applied: building robust and coherent interactive data visualization systems. Thus, to validate and refine the theoretical concepts, I also develop an original open-source interactive data visualization library.
+
+Consequently, large parts of this thesis are also dedicated to the design considerations, architecture, and components of this system, along with its application to real-world data. 
+
+My goal is to demonstrate that many of the theoretical considerations have direct impact on the design characteristics of the system. Ultimately, I contend that, to build truly general and efficient interactive data visualization systems, we need to take both the theoretical and practical considerations into account. 
 
 #### Thesis Overview
 
-The thesis is organized as follows. Section \@ref(background) provides a review of the history of interactive data visualization, theoretical considerations regarding interactivity, common interactive features, and broader data visualization theory. Section \@ref(problems) identifies specific challenges in designing interactive data visualization pipelines and introduces the core algebraic theory. Section \@ref(goals), outlines general objectives and goals that guided the development of the interactive data visualization software system created as part of this project. Section \@ref(system) details more specific design considerations, architectural decisions, and key components of the developed software. Section \@ref(applied-example) presents a practical example of exploring a real-world data set using the developed system. Finally, Section \@ref(discussion), discusses lessons learned and potential future research directions.
+The thesis is organized as follows. Section \@ref(background) provides a review of the history of interactive data visualization, theoretical considerations regarding interactivity, common interactive features, and broader data visualization theory. Section \@ref(problems) identifies specific challenges in designing interactive data visualization pipelines and introduces some core algebraic theory. Section \@ref(goals), outlines general objectives and goals that guided the development of the interactive data visualization software system created as part of this project. Section \@ref(system) details more specific design considerations, architectural decisions, and key components of the developed software. Section \@ref(applied-example) presents a practical example of exploring a real-world data set using the developed system. Finally, Section \@ref(discussion), discusses lessons learned and potential future research directions.
