Wrote some more

--- a/introduction.Rmd
+++ b/introduction.Rmd
@@ -32,12 +32,18 @@ What makes some combinations of graphics and statistics meaningful, while others
 
 Specifically, I argue that what we can *do* with a graphic is fundamentally determined what the graphics *is*, and summary statistics are an unavoidable part of that. Certain types of plots exhibit a special kind of congruence between data, summary statistics, and visuals, which ensures predictable behavior under interaction. Other types of plots break this congruence, making implementing certain interactive features challenging. However, what is this congruence? To describe it formally, I propose a model leveraging some fundamental algebraic concepts from category theory [see e.g. @fong2019]. These concepts, and my application of them, extends beyond the model developed by @wilkinson2012. Specifically, unlike GoG, which treats data, statistics, and graphics as entirely independent, modular components, I propose a compositional model which focuses on preserving key mathematical properties.
 
-Finally, all of this theoretical work would be for naught if it did not lead to practical insights. Specifically, despite its theoretical underpinnings, the end-goal of this work is applied: building robust and coherent interactive data visualization systems. Thus, to validate and refine the theoretical concepts, I also develop an original open-source interactive data visualization library.
+Finally, developing theory is all well and good, but it would be for naught if it did not lead to practical, actionable insights. The end-goal of this work was to provide answers to applied problems that arise when developing interactive data visualization systems. Therefore, to validate and refine the theoretical findings, I also develop an original open-source interactive data visualization library, `plotscaper` (https://github.com/bartonicek/plotscaper). Consequently, parts of this thesis are dedicated to the design and architecture of this system, as well as its application to real-world data. Throughout these sections, I repeatedly explore and elaborate on the connections between the theory and its practical application. 
 
-Consequently, large parts of this thesis are also dedicated to the design considerations, architecture, and components of this system, along with its application to real-world data. 
+Ultimately, I contend that, to build truly general and efficient interactive data visualization systems, we need to take both the theory and practice into account. To reiterate the key point, what we can *do* with a visualization is predicated on what the visualization *is*, and algebraic concepts provide a uniquely powerful tool for describing this.  
 
-My goal is to demonstrate that many of the theoretical considerations have direct impact on the design characteristics of the system. Ultimately, I contend that, to build truly general and efficient interactive data visualization systems, we need to take both the theoretical and practical considerations into account. 
+#### Structure of the thesis
 
-#### Thesis Overview
+The thesis is organized as follows:
 
-The thesis is organized as follows. Section \@ref(background) provides a review of the history of interactive data visualization, theoretical considerations regarding interactivity, common interactive features, and broader data visualization theory. Section \@ref(problems) identifies specific challenges in designing interactive data visualization pipelines and introduces some core algebraic theory. Section \@ref(goals), outlines general objectives and goals that guided the development of the interactive data visualization software system created as part of this project. Section \@ref(system) details more specific design considerations, architectural decisions, and key components of the developed software. Section \@ref(applied-example) presents a practical example of exploring a real-world data set using the developed system. Finally, Section \@ref(discussion), discusses lessons learned and potential future research directions.
+- **Section \@ref(background)** provides a brief overview of the history of interactive data visualization, theoretical considerations regarding interactive graphics as well as common interactive features, and several broader, important topics in data visualization. 
+- **Section \@ref(problems)** identifies key challenges in designing interactive data visualization pipelines and introduces some core algebraic theory. 
+- **Section \@ref(goals)** outlines the general objectives and goals that guided the development of the interactive data visualization software system (`plotscaper`).
+- **Section \@ref(system)** overviews key design and architectural decisions, and discusses key components of the delivered software. 
+- **Section \@ref(applied-example)** presents a practical example of applying `plotscaper` to explore a real-world data set. 
+- **Section \@ref(discussion)** discusses lessons learned and potential future research directions, covering both the theoretical model and the applied work.
+- **Section \@ref(conclusion)** provides some concluding remarks and closing thoughts.
